add back the condition check

--- a/src/PrestaShopBundle/Resources/config/services/core/form/command_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/command_builder.yml
@@ -133,6 +133,6 @@ services:
   prestashop.core.form.command_builder.product.update_product_commands_builder:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\UpdateProductCommandsBuilder
     # @todo: tags commented bellow, to avoid affecting product page until all the related commands are refactored.
-    tags: [ 'core.product_command_builder' ]
+    # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
