--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_data_provider.yml
@@ -274,6 +274,7 @@ services:
       - '@doctrine.orm.entity_manager'
       - 'stable'
       - '@=service("prestashop.adapter.multistore_feature").isActive()'
+      - '@prestashop.bundle.routing.converter.cache_provider'
 
   prestashop.admin.configure.advanced_parameters.beta_feature_flags_form_data_provider:
     class: 'PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\FeatureFlag\FeatureFlagsFormDataProvider'
@@ -281,6 +282,7 @@ services:
       - '@doctrine.orm.entity_manager'
       - 'beta'
       - '@=service("prestashop.adapter.multistore_feature").isActive()'
+      - '@prestashop.bundle.routing.converter.cache_provider'
 
   prestashop.adapter.security.general.form_provider:
     class: 'PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\Security\FormDataProvider'
