--- a/src/PrestaShopBundle/Resources/config/services/bundle/routing.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/routing.yml
@@ -17,9 +17,16 @@ services:
     public: true
 
   prestashop.bundle.routing.converter.router_provider:
-    class: 'PrestaShopBundle\Routing\Converter\RouterProvider'
+    alias: PrestaShopBundle\Routing\Converter\RouterProvider
+    deprecated: ~
+
+  PrestaShopBundle\Routing\Converter\RouterProvider:
+    autowire: true
+
+  PrestaShopBundle\Routing\Converter\LegacyRouteFactory:
+    autowire: true
     arguments:
-      - '@router'
+      - '@prestashop.core.admin.feature_flag.repository'
 
   # We set this alias so that we can override it in test environment (to avoid memory limit crashes)
   prestashop.bundle.routing.converter.cache:
