--- a/src/PrestaShopBundle/Resources/config/services/core/customer_service.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/customer_service.yml
@@ -2,7 +2,7 @@ services:
   _defaults:
     public: true
 
-  prestashop.core.customer_service.command_handler.delete_customer_thread_handler:
+  prestashop.core.domain.customer_service.command_handler.delete_customer_thread_handler:
     class: 'PrestaShop\PrestaShop\Core\Domain\CustomerService\CommandHandler\DeleteCustomerThreadHandler'
     arguments:
       - '@prestashop.core.domain.customer_service.repository.customer_thread_repository'
@@ -10,7 +10,7 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\CustomerService\Command\DeleteCustomerThreadCommand
 
-  prestashop.core.customer_service.command_handler.bulk_delete_customer_thread_handler:
+  prestashop.core.domain.customer_service.command_handler.bulk_delete_customer_thread_handler:
     class: 'PrestaShop\PrestaShop\Core\Domain\CustomerService\CommandHandler\BulkDeleteCustomerThreadHandler'
     arguments:
       - '@prestashop.core.domain.customer_service.repository.customer_thread_repository'
@@ -29,7 +29,6 @@ services:
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\CustomerMessage\Command\AddOrderCustomerMessageCommand
-
 
   prestashop.core.domain.customer_service.query_handler.get_customer_thread_for_viewing_handler:
     class: 'PrestaShop\PrestaShop\Core\Domain\CustomerService\QueryHandler\GetCustomerThreadForViewingHandler'
