--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -47,6 +47,7 @@ body:
     id: prestashop-version
     attributes:
       label: PrestaShop version(s) where the bug happened
+      description: If the issue concerns upgrade, specify which versions you upgrading FROM and upgrading TO
       placeholder: "e.g., 1.7.5.2 or 1.7.8.0"
     validations:
       required: true
