shippingFiller and command properties merged to UpdateProductCommand

--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -570,3 +570,7 @@ services:
   prestashop.adapter.product.update.filler.details_filler:
     class: PrestaShop\PrestaShop\Adapter\Product\Update\Filler\DetailsFiller
     tags: [ 'core.product_filler' ]
+
+  prestashop.adapter.product.update.filler.shipping_filler:
+    class: PrestaShop\PrestaShop\Adapter\Product\Update\Filler\ShippingFiller
+    tags: [ 'core.product_filler' ]
