--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -11,6 +11,12 @@ jobs:
       matrix:
         js: [ '16' ]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.0
+        with:
+          all_but_latest: true
+          access_token: ${{ github.token }}
+
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
