Enabling legacy order id

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
@@ -32,8 +32,8 @@ admin_order_returns_edit:
     _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\MerchandiseReturnController::editAction
     _legacy_controller: AdminReturn
     #    _legacy_link: AdminReturn:updateorder_return
-    #    _legacy_parameters:
-    #      id_order_return: orderReturnId
+    _legacy_parameters:
+      id_order_return: orderReturnId
   requirements:
     orderReturnId: \d+
 
