--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -225,6 +225,14 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\Command\UpdateProductShippingCommand
 
+  prestashop.adapter.product.command_handler.set_carriers_handler:
+    class: PrestaShop\PrestaShop\Adapter\Product\CommandHandler\SetCarriersHandler
+    arguments:
+      - '@prestashop.adapter.product.repository.product_multi_shop_repository'
+    tags:
+      - name: tactician.handler
+        command: PrestaShop\PrestaShop\Core\Domain\Product\Command\SetCarriersCommand
+
   prestashop.adapter.product.query_handler.get_product_supplier_options_handler:
     class: PrestaShop\PrestaShop\Adapter\Product\QueryHandler\GetProductSupplierOptionsHandler
     arguments:
