--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/customer_threads.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/customer_threads.yml
@@ -95,3 +95,11 @@ admin_customer_threads_bulk_delete:
     _legacy_controller: AdminCustomerThreads
     _legacy_link: AdminCustomerThreads
     _legacy_feature_flag: customer_threads
+
+admin_customer_threads_contact_options_update:
+  path: /contact_options
+  methods: [ POST ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\CustomerThreadController::contactOptionsUpdate
+    _legacy_controller: AdminCustomerThreads
+    #  _legacy_link: AdminCustomerThreads
