--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -7,7 +7,7 @@ body:
       value: |
         Thank you for taking the time to fill out this bug report. Please take the time to provide as much details as possible. Following our [bug report guidelines](https://devdocs.prestashop.com/8/contribute/contribute-reporting-issues/#best-practices-for-writing-an-issue) will help maintainers qualify your report faster.
 
-        Do not report bugs called "error 500" or "white page", this is a universal error and won't tell us anything. Instead, enable debug mode in Performance section of PrestaShop and try again. You will get a proper error message.
+        Reporting bugs with "error 500" or "white page" may not help us reproduce them. This is a universal error that hides what is underneath. Instead, enable debug mode in the Performance section of PrestaShop and try again. You should get a proper error message.
   - type: checkboxes
     attributes:
       label: Prerequisites
