`check:step-identifiers` : Added check for baseContext

--- a/.github/workflows/ui_tests_code_checks.yml
+++ b/.github/workflows/ui_tests_code_checks.yml
@@ -56,7 +56,7 @@ jobs:
       actions: write  # for styfle/cancel-workflow-action to cancel/stop running workflows
       contents: read  # for actions/checkout to fetch code
     runs-on: ubuntu-latest
-    name: Checking doubles in steps identifiers
+    name: Checking Steps identifiers
 
     steps:
       - name: Cancel Previous Runs
