--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_customization.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_customization.yml
@@ -8,6 +8,8 @@ services:
   prestashop.adapter.product.customization.repository.customization_field_repository:
     class: PrestaShop\PrestaShop\Adapter\Product\Customization\Repository\CustomizationFieldRepository
     arguments:
+      - '@doctrine.dbal.default_connection'
+      - '%database_prefix%'
       - '@prestashop.adapter.product.customization.validate.customization_field_validator'
 
   prestashop.adapter.product.customization.update.customization_field_deleter:
@@ -21,13 +23,12 @@ services:
     arguments:
       - '@prestashop.adapter.product.customization.repository.customization_field_repository'
       - '@prestashop.adapter.product.customization.update.customization_field_deleter'
-      - '@prestashop.adapter.product.repository.product_repository'
+      - '@prestashop.adapter.product.repository.product_multi_shop_repository'
 
   prestashop.adapter.product.customization.query_handler.get_product_customization_fields_handler:
     class: PrestaShop\PrestaShop\Adapter\Product\Customization\QueryHandler\GetProductCustomizationFieldsHandler
     arguments:
       - '@prestashop.adapter.product.customization.repository.customization_field_repository'
-      - '@prestashop.adapter.product.repository.product_repository'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\Customization\Query\GetProductCustomizationFields
@@ -35,7 +36,7 @@ services:
   prestashop.adapter.product.customization.command_handler.set_product_customization_fields_handler:
     class: PrestaShop\PrestaShop\Adapter\Product\Customization\CommandHandler\SetProductCustomizationFieldsHandler
     arguments:
-      - '@prestashop.adapter.product.repository.product_repository'
+      - '@prestashop.adapter.product.customization.repository.customization_field_repository'
       - '@prestashop.adapter.product.customization.update.product_customization_field_updater'
     tags:
       - name: tactician.handler
