Simplify Profile form

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1324,8 +1324,8 @@ services:
   form.type.configure.advanced_parameters.profile:
     class: 'PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\Profile\ProfileType'
     public: true
-    arguments:
-      - '@translator'
+    calls:
+      - { method: setTranslator, arguments: [ '@translator' ] }
     tags:
       - { name: form.type }
 
