--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
@@ -90,6 +90,7 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\ProfileFormDataProvider'
     arguments:
       - '@prestashop.core.query_bus'
+      - '@=service("prestashop.adapter.employee.avatar_provider").getDefaultAvatarUrl()'
 
   prestashop.core.form.identifiable_object.data_provider.cms_page_form_data_provider:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\CmsPageFormDataProvider'
