--- a/src/PrestaShopBundle/Resources/config/services/bundle/event_listener.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/event_listener.yml
@@ -110,3 +110,10 @@ services:
       - '@logger'
     tags:
       - { name: kernel.event_subscriber }
+
+  PrestaShopBundle\EventListener\ShopConstraintListener:
+    public: false
+    arguments:
+      - "@prestashop.adapter.shop.context"
+    tags:
+      - { name: kernel.event_listener, method: onKernelRequest }
