--- a/app/config/api_platform/resources.yml
+++ b/app/config/api_platform/resources.yml
@@ -1,8 +1,10 @@
 resources:
-  PrestaShop\PrestaShop\Core\Domain\Hook\Query\GetHookStatus:
+  PrestaShopBundle\Api\Resource\HookStatus:
     operations:
       ApiPlatform\Metadata\Get:
         provider: PrestaShopBundle\Api\StateProvider\HookStatusProvider
-        uriTemplate: '/hooks/{id}'
+        uriTemplate: '/hook-status/{id}'
         requirements:
           id: '\d+'
+        exceptionToStatus:
+          PrestaShop\PrestaShop\Core\Domain\Hook\Exception\HookNotFoundException: 404
