--- a/src/PrestaShopBundle/Resources/config/services/core/form/command_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/command_builder.yml
@@ -149,3 +149,8 @@ services:
     # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
+
+  prestashop.core.form.command_builder.product.combination.update_combination_commands_builder:
+    class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\Combination\UpdateCombinationCommandsBuilder
+    # @todo: tags commented bellow, to avoid affecting combination page until all the related commands are refactored.
+    # tags: [ 'core.combination_command_builder' ]
