Refactored repositories to work properly added integration tests for them.
# Conflicts:
#	src/PrestaShopBundle/Form/Admin/Type/TextPreviewType.php
#	src/PrestaShopBundle/Resources/config/services/adapter/order_return_state.yml

# Conflicts:
#	src/PrestaShopBundle/Form/Admin/Type/TextPreviewType.php

# Conflicts:
#	src/PrestaShopBundle/Form/Admin/Type/TextPreviewType.php

--- a/src/PrestaShopBundle/Resources/config/services/adapter/order.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/order.yml
@@ -284,5 +284,5 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Order\Command\SetInternalOrderNoteCommand
 
-  prestashop.core.domain.order.repository.order_repository:
-    class: PrestaShop\PrestaShop\Core\Domain\Order\Repository\OrderRepository
+  prestashop.adapter.order.repository.order_repository:
+    class: PrestaShop\PrestaShop\Adapter\Order\Repository\OrderRepository
